--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2023.11.17
 distro==1.8.0
 Django==4.2.7
 django-bootstrap5==23.3
+django-extensions==3.2.3
 exceptiongroup==1.2.0
 h11==0.14.0
 httpcore==1.0.2
@@ -13,6 +14,7 @@ idna==3.5
 openai==1.3.5
 pydantic==2.5.2
 pydantic_core==2.14.5
+pygraphviz==1.11
 sniffio==1.3.0
 sqlparse==0.4.4
 tqdm==4.66.1
